--- a/data/block.htm
+++ b/data/block.htm
@@ -6,19 +6,36 @@
   <br>Продолжительность работы будильника: <b>{{timeled}}</b>сек.
  </div>
  <hr>
- <div class="alert alert-dismissible alert-info">
-  Нажимая ниже на кнопки цвета, он будит гореть
-  <select id="work-time-{{ip}}" class="form-control input-sm" style="width:60px;display:inline;">
-   <option value="60">1</option><option value="300" selected>5</option><option value="600">10</option><option value="1500">15</option><option value="1800">30</option><option value="3600">60</option><option value="5400">1:30</option><option value="7200">2:00</option><option value="10800">3:00</option>
-  </select> минут.
+ <div class="col-sm-offset-1 col-sm-10 pop-up hidden" id="pop-up-{{ip}}">
+  <h5 class="alert-warning">Время</h5>
+  <h4>На сколько минут включить?</h4>
+  <div class="btn-group">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=60&s='+val('sound')*10,thisId);return false" value="1">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=300&s='+val('sound')*10,thisId);return false" value="5">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=600&s='+val('sound')*10,thisId);return false" value="10">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=1500&s='+val('sound')*10,thisId);return false" value="15">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=1800&s='+val('sound')*10,thisId);return false" value="30">
+  </div>
+  <br>
+  <div class="btn-group">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=3600&s='+val('sound')*10,thisId);return false" value="60">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=5400&s='+val('sound')*10,thisId);return false" value="1:30">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=7200&s='+val('sound')*10,thisId);return false" value="2:00">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&t=10800&s='+val('sound')*10,thisId);return false" value="3:00">
+  </div>
+  <hr>
+  <h4>Время работы сигнала:</h4>
+  <div class="input-group">
+   <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+" id="sound">
+   <span class="input-group-addon">сек.</span>
+  </div>
+  <hr>
+  <a href="#" onclick="toggle('pop-up-{{ip}}');return false" class="btn btn-block btn-default">Отмена</a>
  </div>
- <div class="input-group btn-block">
-  <span class="input-group-addon" style="margin-bottom:5px;">Выбрите цвет:</span>
-  <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="ajax('{{ip}}','rgb?s=1&r='+parseInt((this.value).substring(1,3),16)+'&amp;g='+parseInt((this.value).substring(3,5),16)+'&amp;b='+parseInt((this.value).substring(5,7),16)+'&amp;t='+document.getElementById('work-time-{{ip}}').value,this);" value="#fdfdfd">
- </div>
- <input style="width:32%;display:inline-block" class="btn btn-block btn-danger" value="Красный" onclick="ajax('{{ip}}','rgb?s=1&r=255&g=0&b=0&t='+document.getElementById('work-time-{{ip}}').value,this);document.getElementById('color-{{ip}}').value='#FF0000';" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="Зеленый" onclick="ajax('{{ip}}','rgb?s=1&r=0&g=255&b=0&t='+document.getElementById('work-time-{{ip}}').value,this);document.getElementById('color-{{ip}}').value='#00FF00';" type="submit">
- <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="Синий" onclick="ajax('{{ip}}','rgb?s=1&r=0&g=0&b=255&t='+document.getElementById('work-time-{{ip}}').value,this);document.getElementById('color-{{ip}}').value='#0000FF';" type="submit">
+ <input type="color" style="height:40px;" id="color-{{ip}}" class="form-control btn-primary" onchange="toggle('pop-up-{{ip}}');colorUrl='rgb?r='+parseInt((this.value).substring(1,3),16)+'&g='+parseInt((this.value).substring(3,5),16)+'&b='+parseInt((this.value).substring(5,7),16);thisId=this;return false" value="#fdfdfd">
+ <input style="width:32%;display:inline-block;margin-top:5px;" class="btn btn-block btn-danger" value="Красный" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=255&g=0&b=0';document.getElementById('color-{{ip}}').value='#FF0000';thisId=this;return false" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-success" value="Зеленый" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=255&b=0';document.getElementById('color-{{ip}}').value='#00FF00';thisId=this;return false" type="submit">
+ <input style="width:32%;display:inline-block" class="btn btn-block btn-info" value="Синий" onclick="toggle('pop-up-{{ip}}');colorUrl='rgb?r=0&g=0&b=255';document.getElementById('color-{{ip}}').value='#0000FF';thisId=this;return false" type="submit">
  <input type="submit" onclick="ajax('{{ip}}','led',this);" value="Включить\Выключить" class="btn btn-block btn-primary">
  <hr>
  <div class="alert alert-dismissible alert-info">Изменить конфигурацию устройсва вы можете на странице управления</div>
