--- a/data/device.htm
+++ b/data/device.htm
@@ -31,7 +31,7 @@
       r_rgb =p[0];
       g_rgb =p[1];
       b_rgb =p[2];
-      document.getElementById('set-time').style.display="block";
+      toggle('pop-up');
       //on_rgb(this,p[0],p[1],p[2]);
      });
     },false);
@@ -106,7 +106,7 @@
     send_request(submit,server);
    }
    function on_rgb(submit,t){
-    document.getElementById('set-time').style.display="none";
+    toggle('pop-up');
     set_rgb(submit,r_rgb,g_rgb,b_rgb,t);
    }
    function set_time(submit){
@@ -122,103 +122,89 @@
     send_request(submit,server);
    }
   </script>
-  <style type="text/css">
-   #set-time {
-    z-index:111;
-    background-color:#fff;
-    box-shadow:0 12px 15px rgba(0, 0, 0, 0.4);
-    padding:20px;
-    margin-top:-45%;
-    position:relative;
-   }
-  </style>
  </head>
  <body onload="load();">
   <div class="container">
    <div class="row" style="text-align:center;">
-    <h1 style="margin:50px;">Страница управления</h1>
+    <h1 style="margin:50px;">{{LangOptions1}}</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info">{{SSDP}}</h5>
-     <a class="btn btn-block btn-danger" href="/">Страница устройств</a>
-     <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
+     <a class="btn btn-block btn-danger" href="/">{{LangDevices}}</a>
+     <a class="btn btn-block btn-default" href="/setup.htm">{{LangSetting3}}</a>
      <hr>
-     <div class="alert alert-dismissible alert-info">С помощью сервиса <a href="https://ifttt.com/myrecipes/personal" target="_blank">ifttt.com</a> Лампа может включатся по множествам сценариев, например: новое сообщение в facebook, twitter, <a href="#" onclick="toggle('hide');return false">подробнее...</a><span id="hide" class="hidden">задания в Google calendar, почта и многое другое. Подробней о том как это сделать вы можете посмотреть видео <a href="https://youtu.be/3PVQYLQ-XDQ" target="_blank">здесь</a>.<strong><br>Локальная ссылка: <span id="url1">Выберите цвет</span><br>Глобальная ссылка: <span id="url2">Выберите цвет</span></strong></span>
+     <div class="alert alert-dismissible alert-info">{{LangIfttt1}}<span id="hide" class="hidden">{{LangIfttt2}}</span>
+     </div>
+     <div class="col-sm-offset-3 col-sm-6 pop-up hidden" id="pop-up">
+      <h5 class="alert-warning">{{LangTime10}}</h5>
+      <h4>{{LangTime11}}</h4>
+      <div class="btn-group">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,60)" value="1">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,300)" value="5">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,600)" value="10">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,1500)" value="15">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,1800)" value="30">
+      </div>
+      <br>
+      <div class="btn-group">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,3600)" value="60">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,5400)" value="1:30">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,7200)" value="2:00">
+       <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,10800)" value="3:00">
+      </div>
+      <hr>
+      <h4>{{LangTime12}}</h4>
+      <div class="input-group">
+       <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+" id="sound">
+       <span class="input-group-addon">{{LangSek}}</span>
+      </div>
+      <hr>
+      <a href="#" onclick="toggle('pop-up');return false" class="btn btn-block btn-default">{{LangCancel}}</a>
      </div>
      <div class="thumb">
       <div class="preview"></div>
       <img alt="" style="cursor:pointer;width:100%;" src="/swatches.png" />
      </div>
-     <div class="row">
-      <div class="col-sm-offset-3 col-sm-6" id="set-time" style="display:none;">
-       <h5 class="alert-warning">Время</h5>
-       <h4>На сколько минут включить?</h4>
-       <div class="btn-group">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,60)" value="1">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,300)" value="5">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,600)" value="10">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,1500)" value="15">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,1800)" value="30">
-       </div>
-       <br>
-       <div class="btn-group">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,3600)" value="60">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,5400)" value="1:30">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,7200)" value="2:00">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,10800)" value="3:00">
-       </div>
-       <hr>
-       <h4>Время работы сигнала:</h4>
-       <div class="input-group">
-        <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+"  id="sound">
-        <span class="input-group-addon">сек.</span>
-       </div>
-       <hr>
-       <a href="#" onclick="document.getElementById('set-time').style.display='none';return false" class="btn btn-block btn-default">Отмена</a>
-      </div>
-     </div>
      <canvas id="cs" style="display:none;"></canvas>
-     <input type="submit" class="btn btn-block btn-primary" onclick="led(this);" value="Включить\Выключить">
+     <input type="submit" class="btn btn-block btn-primary" onclick="led(this);" value="{{LangOnOff}}">
      <hr>
-     <h2>Будильники</h2>
+     <h2>{{LangTime3}}</h2>
      <div class="row">
       <div class="col-sm-6">
-       <h4>Будильник 1:</h4>
-       <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="Пример: 07:10:30">
+       <h4>{{LangTime4}} 1:</h4>
+       <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="{{LangExample}}: 07:10:30">
        <div class="btn-group" style="width:100%;">
-        <input class="btn btn-success" style="width:70%;" value="Сохранить" onclick="set_time1(this);" type="submit">
-        <input class="btn btn-default" style="width:30%;" value="Выкл." onclick="document.getElementById('time1').value='';set_time1(this);" type="submit">
+        <input class="btn btn-success" style="width:70%;" value="{{LangSave}}" onclick="set_time1(this);" type="submit">
+        <input class="btn btn-default" style="width:30%;" value="{{LangOff}}" onclick="document.getElementById('time1').value='';set_time1(this);" type="submit">
        </div>
-       <h4>Будильник 2:</h4>
-       <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="Пример: 07:10:30">
+       <h4>{{LangTime4}} 2:</h4>
+       <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="{{LangExample}}: 07:10:30">
        <div class="btn-group" style="width:100%;">
-        <input class="btn btn-success" style="width:70%;" value="Сохранить" onclick="set_time2(this);" type="submit">
-        <input class="btn btn-default" style="width:30%;" value="Выкл." onclick="document.getElementById('time2').value='';set_time2(this);" type="submit">
+        <input class="btn btn-success" style="width:70%;" value="{{LangSave}}" onclick="set_time2(this);" type="submit">
+        <input class="btn btn-default" style="width:30%;" value="{{LangOff}}" onclick="document.getElementById('time2').value='';set_time2(this);" type="submit">
        </div>
       </div>
       <div class="col-sm-6">
-       <div class="alert alert-dismissible alert-warning"><b>Обратите внимание</b> Настраивая время перед одиночными цифрами пишите 0. Пример: 03:09:10.
-        Будильник будит повторять звонить каждый день.
-       </div>
+       <div class="alert alert-dismissible alert-warning">{{LangTime6}}</div>
        <div class="alert alert-dismissible alert-info">
-        Больше настроек вы можете получить на <a href="https://ifttt.com/create/if-date_and_time?sid=1" target="_blank">ifttt.com</a>.
+        {{LangIfttt3}}
        </div>
       </div>
      </div>
      <div class="row">
-      <h2>Время работы будильника</h2>
+      <h2>{{LangTime12}}</h2>
       <div class="col-sm-8">
-       <div class="alert alert-dismissible alert-info">Здесь указается время в секундах как долго будет звенеть будильник и гореть LED.</div>
+       <div class="alert alert-dismissible alert-info">{{LangTime7}}</div>
       </div>
       <div class="col-sm-4">
        <div class="input-group">
         <input id="led" value="{{timeled}}" class="form-control" pattern="[0-9]*[.,]?[0-9]+">
-        <span class="input-group-addon">сек.</span>
+        <span class="input-group-addon">{{LangSec}}</span>
        </div>
-       <input class="btn btn-block btn-success" value="Сохранить" onclick="set_time(this);" type="submit">
+       <input class="btn btn-block btn-success" value="{{LangSave}}" onclick="set_time(this);" type="submit">
       </div>
      </div>
      <hr>
-     <a class="btn btn-block btn-default" href="/setup.htm">Доп. настройки</a>
+     <a class="btn btn-block btn-default" href="/setup.htm">{{LangSetting3}}</a>
     </div>
    </div>
   </div>
