--- a/data/device.htm
+++ b/data/device.htm
@@ -53,8 +53,9 @@
      });
     },false);
     document.body.style.backgroundColor="#"+jsonResponse.color;
+    if (jsonResponse.state=='0') {blockval=jsonResponse.LangOn;} else {blockval=jsonResponse.LangOff;}
+    document.getElementById('off-on').value = blockval;
    }
-
    function useCanvas(el,image,callback){
     el.width = image.width;
     el.height = image.height;
@@ -86,6 +87,7 @@
    function led(submit){
     server = "/led";
     send_request(submit,server);
+    load();
    }
    function set_rgb(submit,t){
     document.body.style.background="#"+nex_color;
@@ -109,6 +111,7 @@
      xhr.send(null);
     }
     send_request(submit,server);
+    load();
     mode = 'off';
    }
    function on_rgb(submit,t){
@@ -228,9 +231,7 @@
       <option value="41">Fireworks</option>
      </select>
 
-     <input type="submit" class="btn btn-block btn-primary" onclick="led(this);" value="{{LangOnOff}}">
-
-
+     <input type="submit" class="btn btn-block btn-primary" onclick="led(this);" id="off-on" value="{{LangOnOff}}">
 
      <hr>
      <h2>{{LangTime3}}</h2>
@@ -240,13 +241,13 @@
        <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="{{LangExample}}: 07:10:30">
        <div class="btn-group" style="width:100%;">
         <input class="btn btn-success" style="width:70%;" value="{{LangSave}}" onclick="set_time1(this);" type="submit">
-        <input class="btn btn-default" style="width:30%;" value="{{LangOff}}" onclick="document.getElementById('time1').value='';set_time1(this);" type="submit">
+        <input class="btn btn-default" style="width:30%;" value="{{LangOff.}}" onclick="document.getElementById('time1').value='';set_time1(this);" type="submit">
        </div>
        <h4>{{LangTime4}} 2:</h4>
        <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="{{LangExample}}: 07:10:30">
        <div class="btn-group" style="width:100%;">
         <input class="btn btn-success" style="width:70%;" value="{{LangSave}}" onclick="set_time2(this);" type="submit">
-        <input class="btn btn-default" style="width:30%;" value="{{LangOff}}" onclick="document.getElementById('time2').value='';set_time2(this);" type="submit">
+        <input class="btn btn-default" style="width:30%;" value="{{LangOff.}}" onclick="document.getElementById('time2').value='';set_time2(this);" type="submit">
        </div>
       </div>
       <div class="col-sm-6">
